--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,3 +7,7 @@ AllCops:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/Documentation:
+  Enabled: false
+Style/MutableConstant:
+  Enabled: false
